# Tasks

./: .gitignore  CMakeLists.txt  README.md
Clusterizer/: CMakeLists.txt  ReadMe.md
Clusterizer/Source/: Cluster.cpp  Cluster.h  main.cpp
Clusterizer_withoutGui/: .gitignore  CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterConfig.xml  Clusterizer.cpp  Clusterizer.h  main.cpp
Vectorizer/: .gitignore  CMakeLists.txt  Readme.md
Vectorizer/Source/: Vectorize.cpp  Vectorize.h  main.cpp
